# multiRAT-GNN

./: .gitignore  README.md  pyproject.toml
src/: train_graph.py  train_non_graph.py
src/databases/: db_manager.py  schemas.py
src/datasets/: data_processor_fnn.py  data_processor_gnn_hetero.py  data_processor_gnn_homo.py  exata_dataset_fnn.py  exata_dataset_gnn_hetero.py  exata_dataset_gnn_homo.py
src/models/: fnn_model.py  graph_model.py
src/trainers/: __init__.py  base_trainer.py  graph_trainer.py  offline_trainer.py
src/utils/: __init__.py  helpers.py  loggers.py  paths.py
